# longueuil-registration

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  config.example.toml  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
src/longueuil_aweille/: __init__.py  __main__.py  browse.py  config.py  registration.py  status.py  verify.py
src/longueuil_registration/: __init__.py  __main__.py  config.py  registration.py
tasks/: todo.md
tests/: test_cli.py  test_config.py
